[gd_scene load_steps=42 format=3 uid="uid://dl2kws5sjyad3"]

[ext_resource type="Script" path="res://Scenes/Cars/maluch_3/maluch_3.gd" id="1_lfyfs"]
[ext_resource type="Texture2D" uid="uid://bx033dfc6pesf" path="res://Assets/Objects/cars/maluch2/maluch3_body.png" id="1_yothv"]
[ext_resource type="Texture2D" uid="uid://bcrby7a04efk3" path="res://Assets/Explosions/Explosion1.png" id="2_6k0y1"]
[ext_resource type="Texture2D" uid="uid://b5o3at7s67uyi" path="res://Assets/Objects/cars/maluch2/maluch2_kolo.png" id="2_pcqor"]
[ext_resource type="Texture2D" uid="uid://3r7gkrxwf646" path="res://Assets/Objects/cars/maluch3/buda_tyl.png" id="5_h0ewb"]
[ext_resource type="Texture2D" uid="uid://c18lng4jvcmhk" path="res://Assets/Objects/cars/maluch3/dach_1.png" id="6_6plhu"]
[ext_resource type="Texture2D" uid="uid://cjrkas4g1c8t3" path="res://Assets/Objects/cars/maluch3/dzwi.png" id="7_0cm1f"]
[ext_resource type="Texture2D" uid="uid://dh17k1exgnwaj" path="res://Assets/Objects/cars/maluch3/lampa_tyl.png" id="8_hy7bo"]
[ext_resource type="Texture2D" uid="uid://cjc8f02av5smm" path="res://Assets/Objects/cars/maluch3/maska_p.png" id="9_0x6im"]
[ext_resource type="Texture2D" uid="uid://mr4stfgbqldh" path="res://Assets/Objects/cars/maluch3/podloga.png" id="10_22wtr"]
[ext_resource type="Texture2D" uid="uid://c2ffs3r2x66tj" path="res://Assets/Objects/cars/maluch3/przod_p.png" id="11_ba56r"]
[ext_resource type="Texture2D" uid="uid://buufkfy8qrmyd" path="res://Assets/Objects/cars/maluch3/szyba_p.png" id="12_vejpi"]
[ext_resource type="Texture2D" uid="uid://b07p7ao48bks8" path="res://Assets/Objects/cars/maluch3/szyba_tyl.png" id="13_q0blv"]
[ext_resource type="AudioStream" uid="uid://cy6xdfjramdo" path="res://Assets/Sounds/Sfx/bomb.wav" id="14_xw3li"]
[ext_resource type="PackedScene" uid="uid://flpc13k6p4us" path="res://Scenes/Bullet/Bullet_holes.tscn" id="15_n1ch5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rnuuu"]
atlas = ExtResource("2_6k0y1")
region = Rect2(0, 0, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_whoai"]
atlas = ExtResource("2_6k0y1")
region = Rect2(204, 0, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_b27yu"]
atlas = ExtResource("2_6k0y1")
region = Rect2(408, 0, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_yudml"]
atlas = ExtResource("2_6k0y1")
region = Rect2(612, 0, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcivo"]
atlas = ExtResource("2_6k0y1")
region = Rect2(816, 0, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6b6h"]
atlas = ExtResource("2_6k0y1")
region = Rect2(0, 204, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_yolkf"]
atlas = ExtResource("2_6k0y1")
region = Rect2(204, 204, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvj55"]
atlas = ExtResource("2_6k0y1")
region = Rect2(408, 204, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_72adq"]
atlas = ExtResource("2_6k0y1")
region = Rect2(612, 204, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjmts"]
atlas = ExtResource("2_6k0y1")
region = Rect2(816, 204, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnrrr"]
atlas = ExtResource("2_6k0y1")
region = Rect2(0, 408, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7p1a"]
atlas = ExtResource("2_6k0y1")
region = Rect2(204, 408, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctuv4"]
atlas = ExtResource("2_6k0y1")
region = Rect2(408, 408, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7vnx"]
atlas = ExtResource("2_6k0y1")
region = Rect2(612, 408, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_33lgr"]
atlas = ExtResource("2_6k0y1")
region = Rect2(816, 408, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0d43"]
atlas = ExtResource("2_6k0y1")
region = Rect2(0, 612, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6bc4"]
atlas = ExtResource("2_6k0y1")
region = Rect2(204, 612, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqyec"]
atlas = ExtResource("2_6k0y1")
region = Rect2(408, 612, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2ot7"]
atlas = ExtResource("2_6k0y1")
region = Rect2(612, 612, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov4nx"]
atlas = ExtResource("2_6k0y1")
region = Rect2(816, 612, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l7y7"]
atlas = ExtResource("2_6k0y1")
region = Rect2(0, 816, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkdy5"]
atlas = ExtResource("2_6k0y1")
region = Rect2(204, 816, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_78ice"]
atlas = ExtResource("2_6k0y1")
region = Rect2(408, 816, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d3ks"]
atlas = ExtResource("2_6k0y1")
region = Rect2(612, 816, 204, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_18do8"]
atlas = ExtResource("2_6k0y1")
region = Rect2(816, 816, 204, 204)

[sub_resource type="SpriteFrames" id="SpriteFrames_ac5g1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnuuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whoai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b27yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yudml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcivo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6b6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yolkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvj55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72adq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjmts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnrrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7p1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctuv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7vnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33lgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0d43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6bc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqyec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2ot7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov4nx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5l7y7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkdy5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78ice")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d3ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18do8")
}],
"loop": false,
"name": &"explode",
"speed": 25.0
}]

[node name="Maluch3" type="Area2D"]
script = ExtResource("1_lfyfs")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(45, -80, 107, -25, 163, -18, 191, -9, 201, 4, 202, 29, 207, 52, 198, 67, 161, 76, 109, 81, 68, 84, -72, 83, -193, 75, -205, 62, -202, 48, -208, 37, -211, 15, -203, 6, -132, -72, -99, -80)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="explosion_spr" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -152)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_ac5g1")
animation = &"explode"
frame = 24
frame_progress = 1.0

[node name="object_spr" type="Sprite2D" parent="."]
texture = ExtResource("1_yothv")

[node name="Kolo_l" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-134, 72)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_pcqor")

[node name="Kolo_p" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(133, 69)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_pcqor")

[node name="buda_tyl" type="Sprite2D" parent="."]
position = Vector2(-134, 34)
texture = ExtResource("5_h0ewb")

[node name="dach" type="Sprite2D" parent="."]
position = Vector2(-27, -43)
texture = ExtResource("6_6plhu")

[node name="drzwi" type="Sprite2D" parent="."]
position = Vector2(9, 2)
texture = ExtResource("7_0cm1f")

[node name="lampa_tyl" type="Sprite2D" parent="."]
position = Vector2(-205, 30)
texture = ExtResource("8_hy7bo")

[node name="maska_p" type="Sprite2D" parent="."]
position = Vector2(148, -1)
texture = ExtResource("9_0x6im")

[node name="podloga" type="Sprite2D" parent="."]
position = Vector2(-4, 78)
texture = ExtResource("10_22wtr")

[node name="przod_p" type="Sprite2D" parent="."]
position = Vector2(143, 30)
texture = ExtResource("11_ba56r")

[node name="szyba_p" type="Sprite2D" parent="."]
position = Vector2(66, -45)
texture = ExtResource("12_vejpi")

[node name="szyba_tyl" type="Sprite2D" parent="."]
position = Vector2(-125, -39)
texture = ExtResource("13_q0blv")

[node name="snd_explode" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_xw3li")
volume_db = 4.0
pitch_scale = 0.78

[node name="Bullet_holes" parent="." instance=ExtResource("15_n1ch5")]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 21

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
z_index = -1
polygon = PackedVector2Array(42, -82, 109, -24, 167, -19, 195, -6, 201, 9, 205, 58, 192, 73, 157, 78.8, 70, 86, -100, 83, -134, 76, -170, 77, -195, 75, -205, 65, -206, 51, -212, 16, -135, -71, -91, -81)

[node name="Hitpoints" type="Label" parent="."]
offset_left = -130.0
offset_top = -116.0
offset_right = -90.0
offset_bottom = -74.0
theme_override_font_sizes/font_size = 30
text = "0"

[connection signal="animation_finished" from="explosion_spr" to="." method="_on_explosion_spr_animation_finished"]
